--- a/data/settings/navigation.yml
+++ b/data/settings/navigation.yml
@@ -1,5 +1,5 @@
 nav_items: 
   - {label: 'Home', path: '/'}
-  - {label: 'About', path: '/about/'}
+  - {label: 'Products', path: '/products/'}
   - {label: 'News', path: '/news'}
 
