changing tag lines on home page

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -2,5 +2,5 @@ hero:
   image: /images/uploads/homepage-hero.jpg
   title: A Sustainable Life with Less Plastic
 story: >-
-  Living with Less Plastic encourages individual action and advocates for systemic change.
+  For a more sustainable world, Living with Less Plastic (LWLP) encourages individual action and advocates for systemic change to reduce plastic consumption and production.
   
