--- a/data/products/vision.yml
+++ b/data/products/vision.yml
@@ -1,6 +1,10 @@
 title: Vision
-date: 2018-08-12T13:00:49.366Z
+date: 2019-08-17T22:42:07.084Z
 image: /images/uploads/product-01.png
 body: >-
-
-Our vision is a sustainable life with less plastic that is accessible to everyone.
+  Coffea arabica, also known as the Arabian coffee, "coffee shrub of Arabia",
+  "mountain coffee", or "arabica coffee", is a species of Coffea. It is believed
+  to be the first species of coffee to be cultivated, and is the dominant
+  cultivar, representing some 60% of global production. Coffee produced from the
+  less acidic, more bitter, and more highly caffeinated robusta bean makes up
+  the preponderance of the balance.
