--- a/data/products/whoweare.yml
+++ b/data/products/whoweare.yml
@@ -1,10 +1,5 @@
 title: Who We Are
 date: 2019-05-17T22:42:07.084Z
-image: /images/uploads/product-01.png
+image: /images/uploads/green-leaf.svg
 body: >-
-  Coffea arabica, also known as the Arabian coffee, "coffee shrub of Arabia",
-  "mountain coffee", or "arabica coffee", is a species of Coffea. It is believed
-  to be the first species of coffee to be cultivated, and is the dominant
-  cultivar, representing some 60% of global production. Coffee produced from the
-  less acidic, more bitter, and more highly caffeinated robusta bean makes up
-  the preponderance of the balance.
+  Living with Less Plastic is community advocacy group based in New Westminster, BC.  Anyone interested in forwarding our goals is welcome to join our activities. It is an affiliated organization with Beacon Unitarian Church who support our activities.
