--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -1,5 +1,5 @@
 hero:
-  image: /images/uploads/recycle-earth.svg
+  image: /images/uploads/recycle-earth-med.png
   title: A Sustainable Life with Less Plastic
 story: >-
   For a more sustainable world, Living with Less Plastic (LWLP) encourages individual action and advocates for systemic change to reduce plastic consumption and production.
