--- a/data/products/mission.yml
+++ b/data/products/mission.yml
@@ -1,10 +1,5 @@
 title: Mission
 date: 2019-06-17T22:42:07.084Z
-image: /images/uploads/green-leaf.svg
+image: /images/uploads/recycle-earth.svg
 body: >-
-  Coffea arabica, also known as the Arabian coffee, "coffee shrub of Arabia",
-  "mountain coffee", or "arabica coffee", is a species of Coffea. It is believed
-  to be the first species of coffee to be cultivated, and is the dominant
-  cultivar, representing some 60% of global production. Coffee produced from the
-  less acidic, more bitter, and more highly caffeinated robusta bean makes up
-  the preponderance of the balance.
+	For a more sustainable world, Living with Less Plastic (LWLP) encourages individual action and advocates for systemic change to reduce plastic consumption and production.
