--- a/data/products/vision.yml
+++ b/data/products/vision.yml
@@ -1,10 +1,5 @@
 title: Vision
 date: 2019-08-17T22:42:07.084Z
-image: /images/uploads/green-leaf.svg
+image: /images/uploads/recycle-earth.svg
 body: >-
-  Coffea arabica, also known as the Arabian coffee, "coffee shrub of Arabia",
-  "mountain coffee", or "arabica coffee", is a species of Coffea. It is believed
-  to be the first species of coffee to be cultivated, and is the dominant
-  cultivar, representing some 60% of global production. Coffee produced from the
-  less acidic, more bitter, and more highly caffeinated robusta bean makes up
-  the preponderance of the balance.
+   To keep it simple, our vision is for a sustainable life with less plastic that is accessible and affordable for everyone. 
