--- a/data/products/whoweare.yml
+++ b/data/products/whoweare.yml
@@ -3,4 +3,4 @@ date: 2019-05-17T22:42:07.084Z
 image: /images/uploads/recycle-earth.svg
 body: >-
   Living with Less Plastic is community advocacy group based in New Westminster, BC.  Anyone interested in forwarding our goals is welcome to join our activities. It is an affiliated organization with Beacon Unitarian Church who support our activities.
-You can contact us at lessplasticnewwest@gmail.com.
+You can contact us at lessplasticnewwest\@gmail.com.
